backend/yaml/test2.yaml
apiVersion: v1

kind: Pod
metadata:
  name: ubuntu-custom
spec:
  containers:
  - name: ubuntu-custom
    image: storkcr/ubuntuk8s:1.0
    command: ["/bin/sleep", "3650d"]
    imagePullPolicy: IfNotPresent
  restartPolicy: Always
