backend/yaml/mariadb-sts-replication.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb-service
  namespace: covi
  labels:
    app: mariadb
spec:
  ports:
    - port: 3306
      name: mariadb-port
  clusterIP: None
  selector:
    app: mariadb

# Statefulset
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mariadb-sts
  namespace: covi
spec:
  serviceName: "mariadb-service"
  replicas: 3
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      restartPolicy: Always
      containers:
        - name: mariadb
          image: mariadb
          ports:
            - containerPort: 3306
              name: mariadb-port
          volumeMounts:
            - name: datadir
              mountPath: /var/lib/mysql/
            - name: mariadb-config
              mountPath: /etc/mysql/conf.d/
            - name: initdb
              mountPath: /docker-entrypoint-initdb.d
          livenessProbe:
            exec:
              command:
                - /usr/local/bin/healthcheck.sh
                - --su=mysql
                - --connect
                - --innodb_initialized
            initialDelaySeconds: 20
            periodSeconds: 25
      volumes:
        - name: mariadb-config-map
          configMap:
            name: mariadb-configmap
            #defaultMode: 0544
        - name: mariadb-config
          emptyDir: {}
        - name: initdb
          emptyDir: {}

  volumeClaimTemplates:
    - metadata:
        name: datadir
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 500M
