backend/yaml/ingress-springmvc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress.ssl.covi
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingres.class: nginx
    kubernetes.io/tls-acme: "true"
    cert-manager.io/issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/configuration-snippet: |
     #more_set_headers "Request-Id: $request_id";
     #      more_set_headers "Test-Server: 0";
spec:
  tls:
  - hosts:
    - 10.10.27.17.nip.io
    secretName: spring.secret.key
  rules:
  - host: 10.10.27.17.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: springmvc
            port:
              number: 8081
